Fix overlap in header

--- a/SITnett/graphics/style.css
+++ b/SITnett/graphics/style.css
@@ -89,7 +89,7 @@ body {
 }
 
 /* 2.1.2 Desktop */
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1300px) {
 	.topnav a.hamburger-icon {
 		display: none;
 	}
